gccida/g0/gcse_main
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gcse_main/src/gcse.c:1277:7: error: use of undeclared identifier 'subtitle'
v4 = &subtitle; 
      ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gcse_main/src/obj/gcse.o] Error 1
